Fix padding on mobile global nav

--- a/static/sass/_global-settings.scss
+++ b/static/sass/_global-settings.scss
@@ -1,4 +1,4 @@
-$breakpoint-navigation-threshold:    875px;
+$breakpoint-medium:    875px;
 $viewport-threshold:      1281px;
 $color-brand:             #e95420;
 $sp-medium-small: 1rem * .85 !default;
